removed popup and fixed index structure

--- a/index.html
+++ b/index.html
@@ -693,16 +693,13 @@
                 <div class="Collapsible__Inner">
                   <div class="Collapsible__Content">
                     <div class="Collapsible">
-                      <a
-                        class="Collapsible__Button Heading Text--subdued Link Link--primary u-h7 ">SIGN IN</a>
+                      <a class="Collapsible__Button Heading Text--subdued Link Link--primary u-h7 ">SIGN IN</a>
                     </div>
                     <div class="Collapsible">
-                      <a
-                        class="Collapsible__Button Heading Text--subdued Link Link--primary u-h7 ">ORDERS</a>
+                      <a class="Collapsible__Button Heading Text--subdued Link Link--primary u-h7 ">ORDERS</a>
                     </div>
                     <div class="Collapsible">
-                      <a
-                        class="Collapsible__Button Heading Text--subdued Link Link--primary u-h7 ">CREATE ACCOUNT</a>
+                      <a class="Collapsible__Button Heading Text--subdued Link Link--primary u-h7 ">CREATE ACCOUNT</a>
                     </div>
                   </div>
                 </div>
@@ -1832,12 +1829,12 @@
               </noscript>
 
             </div>
-            <div class="ImageHero__ContentOverlay newsletter-popup">
+            <!-- <div class="ImageHero__ContentOverlay newsletter-popup">
               <header class="SectionHeader SectionHeader--center"><a class="news-pop">
                   <h3 class="SectionHeader__SubHeading Heading u-h6">JOIN OUR NEWSLETTER</h3>
                   <h2 class="SectionHeader__Heading Heading u-h1">And receive 15% off your first purchase</h2>
                 </a></header>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -1895,14 +1892,14 @@
                 </li>
                 <li class="Linklist__Item">
 
-                  <a class="Link Link--primary  "
-                    style="font-size:12px;font-weight:normal;color:#8c8c8c;">SHIPPING &amp; DELIVERY</a>
+                  <a class="Link Link--primary  " style="font-size:12px;font-weight:normal;color:#8c8c8c;">SHIPPING
+                    &amp; DELIVERY</a>
 
                 </li>
                 <li class="Linklist__Item">
 
-                  <a class="Link Link--primary  "
-                    style="font-size:12px;font-weight:normal;color:#8c8c8c;">RETURNS &amp; EXCHANGES</a>
+                  <a class="Link Link--primary  " style="font-size:12px;font-weight:normal;color:#8c8c8c;">RETURNS &amp;
+                    EXCHANGES</a>
 
                 </li>
                 <li class="site-footer__linklist-item Linklist__Item">
@@ -1917,21 +1914,21 @@
               <ul class="Linklist">
                 <li class="Linklist__Item">
 
-                  <a class="Link Link--primary productAccordion-title for_size_guide"
-                    data-custom-drawer="" data-type="size" style="font-size:12px;font-weight:normal;color:#8c8c8c;">SIZE
+                  <a class="Link Link--primary productAccordion-title for_size_guide" data-custom-drawer=""
+                    data-type="size" style="font-size:12px;font-weight:normal;color:#8c8c8c;">SIZE
                     GUIDE</a>
 
                 </li>
                 <li class="Linklist__Item">
 
-                  <a class="Link Link--primary  "
-                    style="font-size:12px;font-weight:normal;color:#8c8c8c;">PRIVACY POLICY</a>
+                  <a class="Link Link--primary  " style="font-size:12px;font-weight:normal;color:#8c8c8c;">PRIVACY
+                    POLICY</a>
 
                 </li>
                 <li class="Linklist__Item">
 
-                  <a class="Link Link--primary  "
-                    style="font-size:12px;font-weight:normal;color:#8c8c8c;">TERMS &amp; CONDITIONS</a>
+                  <a class="Link Link--primary  " style="font-size:12px;font-weight:normal;color:#8c8c8c;">TERMS &amp;
+                    CONDITIONS</a>
 
                 </li>
               </ul>
@@ -1948,14 +1945,12 @@
                 </li>
                 <li class="Linklist__Item">
 
-                  <a class="Link Link--primary  "
-                    style="font-size:12px;font-weight:normal;color:#8c8c8c;">FACEBOOK</a>
+                  <a class="Link Link--primary  " style="font-size:12px;font-weight:normal;color:#8c8c8c;">FACEBOOK</a>
 
                 </li>
                 <li class="Linklist__Item">
 
-                  <a class="Link Link--primary  "
-                    style="font-size:12px;font-weight:normal;color:#8c8c8c;">PINTEREST</a>
+                  <a class="Link Link--primary  " style="font-size:12px;font-weight:normal;color:#8c8c8c;">PINTEREST</a>
 
                 </li>
               </ul>
